top banner added

--- a/index.html
+++ b/index.html
@@ -5,12 +5,32 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My-portfolio-website</title>
-
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css">
 
 </head>
 <body>
-  
+
+<section class="top-banner">
+<div class="half-width">
+
+<h1>Hi, 👋 I am Soumen Mondal, a professional <span class="orange-color">Web Developer and SEO Expert</span>
+</h1>
+
+<p>Hi, I am Soumen Mondal, A Certified Professional Web Designer, Developer (WordPress, eCommerce & Shopify) Expert, and Email Marketing, Email Template Design, Campaign setup, etc. Also Working as an advanced SEO Expert, since 2021 and completed over 50+ web projects for 30+ clients at various International Marketplaces.</p>
+
+<a class="link-button" target="_blank" href="https://www.upwork.com/freelancers/~01708656178a2e61cb">Hire Me</a>
+
+</div>
+
+<div class="half-width">
+<img src="Soumen Mondal (2).jpg" alt="Imge of Soumen">
+
+</div>
+
+</section>
 
 
 
@@ -27,8 +47,5 @@
 
 
 
-
-
-  
 </body>
 </html>
